// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Secret Accessors Allows to set data key on stringData 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "data": Object {
      "test": "foo",
    },
    "kind": "Secret",
    "metadata": Object {
      "labels": Object {
        "prunable": "true",
      },
      "name": "test-c8eb60f8-b5htk5g56c",
    },
    "stringData": Object {
      "test": "bar",
    },
  },
]
`;

exports[`Secret Accessors Metadata getter 1`] = `
ApiObjectMetadataDefinition {
  "_additionalAttributes": Object {
    "labels": Object {
      "prunable": "true",
      "test": "true",
    },
    "name": Lazy {
      "producer": Object {
        "produce": [Function],
      },
    },
    "namespace": undefined,
  },
  "annotations": Object {},
  "finalizers": Array [],
  "labels": Object {
    "prunable": "true",
    "test": "true",
  },
  "name": Lazy {
    "producer": Object {
      "produce": [Function],
    },
  },
  "namespace": undefined,
  "ownerReferences": Array [],
}
`;

exports[`Secret Loading files Setting value from binary file's contents with custom key 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Secret",
    "metadata": Object {
      "labels": Object {
        "prunable": "true",
      },
      "name": "test-c8eb60f8-58hg54cfmf",
    },
    "stringData": Object {
      "greeting.txt": "hello",
    },
  },
]
`;

exports[`Secret Loading files Setting value from file's contents 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "data": Object {
      "file.enc": "secret#!23",
    },
    "kind": "Secret",
    "metadata": Object {
      "labels": Object {
        "prunable": "true",
      },
      "name": "test-c8eb60f8-f6kkddkdch",
    },
  },
]
`;

exports[`Secret Loading files Setting value from file's contents with custom key 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "data": Object {
      "greeting.enc": "secret#!23",
    },
    "kind": "Secret",
    "metadata": Object {
      "labels": Object {
        "prunable": "true",
      },
      "name": "test-c8eb60f8-cfbm75t2f8",
    },
  },
]
`;

exports[`Secret Loading files Setting value from string file's contents 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Secret",
    "metadata": Object {
      "labels": Object {
        "prunable": "true",
      },
      "name": "test-c8eb60f8-g9t89kcg82",
    },
    "stringData": Object {
      "file.txt": "hello",
    },
  },
]
`;

exports[`Secret Props Empty Secret 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Secret",
    "metadata": Object {
      "labels": Object {
        "prunable": "true",
      },
      "name": "test-c8eb60f8-5m7k5t56kf",
    },
  },
]
`;

exports[`Secret Props Secret from props 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "data": Object {
      "foo": "secret#!23",
    },
    "immutable": true,
    "kind": "Secret",
    "metadata": Object {
      "annotations": Object {
        "annotation": "test",
      },
      "labels": Object {
        "label": "test",
        "prunable": "true",
      },
      "name": "test-c8eb60f8-2ch5g74c84",
    },
    "stringData": Object {
      "bin": "hello",
    },
    "type": "Opaque",
  },
]
`;
